Resolve style issues

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <div id="root"></div>
+    <div class="modal flex-container column mobile-disclaimer title text-border-2px current-turn">
+        <p>Your device has a smaller width or height than recommended</p>
+        <p>min-width 1000px, min-height 900px</p>
+    </div>
 </body>
 </html>
