--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./res/media/favicon.png" type="image/png">
     <title>Blackjack App</title>
-    <link rel="stylesheet" href="./res/css/normalize.css">
 </head>
 <body>
     <div id="root"></div>
